--- a/public/templates/edit-user-form.html
+++ b/public/templates/edit-user-form.html
@@ -1,11 +1,13 @@
 <form action="" method="" class="form form-inline">
     <div class="form-group">
-        <input type="text" class="form-control" placeholder="Firstname" data-bind="value: fname"/>
+        <input type="text" class="form-control" placeholder="Firstname" data-bind="value: user().fname"/>
     </div>
     <div class="form-group">
-        <input type="text" class="form-control" placeholder="Lastname" data-bind="value: lname"/>
+        <input type="text" class="form-control" placeholder="Lastname" data-bind="value: user().lname"/>
     </div>
+    <!--
     <div class="form-group">
         <button type="submit" class="btn btn-primary" data-bind="click: save">Save</button>
     </div>
+    -->
 </form>
